fix minor bugs, add external file finding